# beeai-threat-hunter

./: .env  .gitignore  Dockerfile  README.md  WARP.md  agent.json  beeai-agent.yaml  manifest.yaml  pyproject.toml
.beeai/: agent.yaml
.bmad-core/: install-manifest.yaml
docs/: architecture.md  beeai-docs.txt  beeai-framework.txt  mindsdb-docs.txt  prd.md
docs/epics/: epic-1-core-infrastructure.md  epic-2-mindsdb-integration.md  epic-3-ai-agents.md  epic-4-case-management.md  epic-5-threat-intelligence.md
src/beeai_threat_hunter/agents/: test_agent.py
