[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "beeai-threat-hunter"
version = "0.1.0"
description = "AI Agents Team for SOC & Threat Hunting using BeeAI Framework"
authors = ["Threat Hunter Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
beeai-sdk = "^0.1.44"
pydantic = "^2.5.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
threat-hunter-test = "src.beeai_threat_hunter.agents.test_agent:serve"
